# ACME

./: LICENSE  LICENSE.html  License.txt  README
Code/: BatchScript.py  BatchScriptThreaded.py  CMakeLists.txt
Code/CellPreprocess/: itkCellPreprocess.h  itkCellPreprocess.txx
Code/ConfocalImageGenerator/: itkAdditiveGaussianNoiseImageFilter.h  itkAdditiveGaussianNoiseImageFilter.txx  itkBinaryThinningImageFilter3D.txx  itkConfocalMembraneImageGenerator.h  itkConfocalMembraneImageGenerator.txx  itkGroupSpatialObjectToImageFilter.h  itkGroupSpatialObjectToImageFilter.txx  itkPeakSignalToNoiseRatioCalculator.h  itkPeakSignalToNoiseRatioCalculator.txx  itkSaltAndPepperNoiseImageFilter.h  itkSaltAndPepperNoiseImageFilter.txx  itkShotNoiseImageFilter.txx  itkSpeckleNoiseImageFilter.txx  itkThreadSafeMersenneTwisterRandomVariateGenerator.cxx  itkThreadSafeMersenneTwisterRandomVariateGenerator.h
Code/Examples/: BallVotingIntersectingCirclesExample2D.cxx  CMakeLists.txt  CVTGenerator.cxx  CellPreprocess.cxx  CellSegmentationStatistics.cxx  IntensityThreshold.cxx  LabelMapOverlapMeasures.cxx  MembraneOrientationBasedHessianCalculator.cxx  MembraneOrientationEigenCalculatorImageFilter.cxx  MembraneSegmentationEvaluation.cxx  MembraneSegmentationImageFilter.cxx  MembraneSegmentationWithMarkersImageFilter.cxx  MembraneVotingField2D.cxx  MembraneVotingField3D.cxx  MultiscalePlanarityAndVoting3D.cxx  MultiscalePlateMeasureImageFilter.cxx  Resample.cxx
Code/Examples/Segmentation/: CMakeLists.txt  MembraneSegmentationImageFilter.cxx
Code/Examples/Testing/: CMakeLists.txt
Code/Examples/Tools/: CMakeLists.txt  DistanceFromMask.cxx  MorphologicalDilationOnLabelImageFilter.cxx  MorphologicalErosionOnLabelImageFilter.cxx  SizeThreshold.cxx
Code/ImageProcessingFilters/: itkCellSegmentationStatistics.h  itkCellSegmentationStatistics.txx  itkGradientWeightedDistanceImageFilter.h  itkGradientWeightedDistanceImageFilter.txx  itkLabelMapOverlapMeasures.h  itkLabelMapOverlapMeasures.txx  itkMorphologicalWatershedFromMarkersImageFilter2.txx  itkMultiScaleLoGImageFilter.h  itkSizeThresholdImageFilter.h  itkSizeThresholdImageFilter.txx
Code/PlanarityFilter/: itkMembraneScaleSelectionImageFilter.h  itkMembraneScaleSelectionImageFilter.txx  itkMultiscaleStructMeasureImageFilter.h  itkMultiscaleStructMeasureImageFilter.txx  itkStructMeasureImageFilter.h  itkStructMeasureImageFilter.txx
Code/TensorVoting/: itkAddNonScalarImageFilter.h  itkAddNonScalarImageFilter.txx  itkBallFieldGenerator2D.h  itkBallFieldGenerator2D.txx  itkBallFieldGenerator3D.h  itkBallFieldGenerator3D.txx  itkComposeVotesFromLookupImageFilter.h  itkComposeVotesFromLookupImageFilter.txx  itkComposeVotesFromLookupImageFilter2D.h  itkComposeVotesFromLookupImageFilter2D.txx  itkComposeVotesFromLookupImageFilter3D.h  itkComposeVotesFromLookupImageFilter3D.txx  itkGPUTensorWithOrientation.h  itkGPUTensorWithOrientation.txx  itkGenerateRotationMatrixHelper.h  itkMatrixInterpolateImageFunction.h  itkMatrixLinearInterpolateImageFunction.h  itkMatrixLinearInterpolateImageFunction.txx  itkPlateFieldGenerator3D.h  itkPlateFieldGenerator3D.txx  itkRotateFieldGenerator.h  itkRotateFieldGenerator.txx  itkStickFieldGenerator2D.h  itkStickFieldGenerator2D.txx  itkStickFieldGenerator3D.h  itkStickFieldGenerator3D.txx  itkTensorToSaliencyImageFilter.h  itkTensorToSaliencyImageFilter.txx  itkTensorVoting.h  itkTensorVoting.txx  itkTensorVoting2D.h  itkTensorVoting2D.txx  itkTensorVoting3D.h  itkTensorVoting3D.txx  itkTensorWithOrientation.h  itkTensorWithOrientation.txx  itkVoteFieldBase.h  itkVoteFieldBase.txx
Code/WatershedImageFilter/: itkGradientWeightedDistanceImageFilter.h  itkGradientWeightedDistanceImageFilter.txx  itkLabelMapOverlapMeasures.h  itkLabelMapOverlapMeasures.txx
Scripts/: MembraneValidation.py  SizeThreshold.py  SyntheticMembraneGenerationBashScript.sh  Validate.py
